--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,16 +22,16 @@ body {
 .btn {
 	padding: 16px 24px;
 	border-radius: 8px;
+
+	&:hover {
+		opacity: 0.4;
+	}
 }
 
 button {
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
-
-	&:hover {
-		opacity: 0.4;
-	}
 }
 
 .comment {
@@ -42,15 +42,25 @@ button {
 	display: flex;
 	gap: 24px;
 
-	.vote-box {
-		border-radius: 8px;
-		height: min-content;
+	.vote-wrapper {
+		display: flex;
+		justify-content: space-between;
 
-		& > * {
-			@include flex-center;
-			width: 36px;
-			height: 32px;
-			text-align: center;
+		.vote-box {
+			border-radius: 8px;
+			height: min-content;
+			width: min-content;
+
+			& > * {
+				@include flex-center;
+				width: 36px;
+				height: 32px;
+				text-align: center;
+			}
+
+			@include m-screen {
+				display: flex;
+			}
 		}
 	}
 
@@ -90,6 +100,10 @@ button {
 				@include flex-center;
 			}
 		}
+	}
+
+	@include m-screen {
+		flex-direction: column-reverse;
 	}
 }
 
@@ -132,11 +146,15 @@ button {
 	.vl {
 		border: 1px solid map-get($colors, "l-gray");
 		margin: 4px 32px 12px 32px;
+
+		@include m-screen {
+			margin: 4px 16px 12px 16px;
+		}
 	}
 }
 
 .comments-list {
-	width: min(80vw, 768px);
+	width: min(90vw, 768px);
 	margin: auto;
 	margin-top: 64px;
 	display: flex;
@@ -147,5 +165,18 @@ button {
 .comment-bottom {
 	* {
 		float: right;
+	}
+}
+
+.comment-buttons-mobile {
+	display: none;
+
+	@include m-screen {
+		display: flex;
+	}
+}
+.comment-buttons-large-screen {
+	@include m-screen {
+		display: none !important;
 	}
 }
